add javafx for macOs-ARM